--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -30,6 +30,7 @@
 .codigobarras.net/
 .com/adssrv/
 .com/afiliados/
+.cv/pub/
 .cruzeirodosul.inf.br/ads/
 .dci.com.br/Banners
 .diariodopara.com.br/capa.swf
