--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -31,6 +31,7 @@
 .com/adssrv/
 .com/afiliados/
 .cv/pub/
+.cv/images/pubs/
 .cruzeirodosul.inf.br/ads/
 .dci.com.br/Banners
 .diariodopara.com.br/capa.swf
