--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -1,5 +1,6 @@
 # Espanol (Iron-Chrome)
 # Updated: 9 May 2010
+&affiliate=
 -publicidad-
 -publicidad/
 .adbasket.net/
@@ -30,9 +31,9 @@
 .codigobarras.net/
 .com/adssrv/
 .com/afiliados/
-.cv/pub/
-.cv/images/pubs/
 .cruzeirodosul.inf.br/ads/
+.cv/images/pubs/
+.cv/pub/
 .dci.com.br/Banners
 .diariodopara.com.br/capa.swf
 .diariodopara.com.br/noticiafull_
@@ -105,6 +106,7 @@
 /dixioforyoursite/
 /find.gl/js.php?
 /flogs.orange.es/
+/h.s.sl.pt/pub/
 /igbarra.js
 /imagem/urchin.gif?
 /imagens.climatempo.com.br/site/imagens/bg_
@@ -151,8 +153,8 @@ http://perfilunico.com/ads/
 http://pmssrv.mercadolibre.
 http://pmssrv.mercadolibre.com.ve/jm/
 http://pmssrv.mercadolivre.com.br/
-http://spamtheweb.com/ul/upload/
 http://solution911.com/
+http://spamtheweb.com/ul/upload/
 http://swi-adserver.com/
 http://tagmanfe.terra.com.br/ShowArea
 http://templates.buscape.com/
