--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: gz4OlV4IFappiLn9wygSoA
-# Updated: 27 May 2010
+# Checksum: 7Vkz8WKL+wgw0WZ05JP5Ng
+# Updated: 28 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1968,6 +1968,7 @@
 /includes/adtags/
 /inline_ad.
 /InlineTextAds?
+/insertAds.
 /iplgadshow
 /j/ads.js
 /js.ng/c
