--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 7Vkz8WKL+wgw0WZ05JP5Ng
+# Checksum: n8QZt/XzZfCkuX632pJ9jg
 # Updated: 28 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1941,6 +1941,10 @@
 /images/gads_
 /images/LD-ads.gif
 /IMAGES/livejasmin/
+/images/ad1.
+/images/ad2.
+/images/ad4.
+/images/ad5.
 /images/newad.
 /images/sponsors/
 /images/totem
