--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: n8QZt/XzZfCkuX632pJ9jg
+# Checksum: o0fwI9XdUG6xdlJZo2FQ7A
 # Updated: 28 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -874,7 +874,7 @@
 .panachetech.
 .paperg.com/
 .partnercash.de/
-.pcpro.co.uk/images/intelSkin_wide.jpg
+.pcpro.co.uk/images/skins/
 .pcr-online.biz/static/banners/
 .peakclick.com/
 .peer39.net/
