--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: o0fwI9XdUG6xdlJZo2FQ7A
+# Checksum: yE1jhep81f28P9spjo+hbg
 # Updated: 28 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1650,9 +1650,8 @@
 /amazon/widget/
 /annonse/
 /annonser/
-/anonymouse.org/ad
+http://anonymouse.org/ad
 /anti-adblock/
-/anti-adblock/css/
 /api.tattermedia.com/
 /api/ads/
 /api/ads/
