--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: yE1jhep81f28P9spjo+hbg
+# Checksum: KY0/+qIETPOvDg02ju+LDg
 # Updated: 28 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2100,6 +2100,7 @@ http://anonymouse.org/ad
 /phpAdsNew/
 /phpadsnew/
 /pic.pbsrc.com/sponsor/
+/pix/ads/
 /pixel?id=
 /plcornerswf.swf?
 /plugins/page-cornr
