--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: KY0/+qIETPOvDg02ju+LDg
-# Updated: 28 May 2010
+# Checksum: qNdXsvSTHLR+cgd7Q3bsXA
+# Updated: 29 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1466,6 +1466,7 @@
 /admentor/
 /admigo.ru/
 /admin/ad_
+/adnetmedia.
 /adng.html?
 /adpage.htm
 /adpeeps
