--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -1042,6 +1042,7 @@
 /partners.thefilter.com/
 /permalink-tracker.html?
 /php-stats.php?
+/php-stats.js
 /phpmyvisites.js
 /ping.html?random
 /ping/show?
