--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: qNdXsvSTHLR+cgd7Q3bsXA
+# Checksum: eQyJ2/vLbhXxOf0ZuXY+wg
 # Updated: 29 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -307,6 +307,7 @@
 .bigpond.com/specials/widgets/specials/
 .bigtube.com/iframes/
 .binlayer.de/
+.binlayer.com/
 .bittads.com/
 .bizographics.
 .bkrtx.com/
@@ -2962,6 +2963,7 @@ http://banners.moreniche.com/show.
 http://banners.rushcommerce.com/
 http://banners.videosz.com/
 http://banners.webcams.com/
+http://banners.partypartners.com/
 http://banners.webmasterplan.
 http://banners3.
 http://bans.bride.
