--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: eQyJ2/vLbhXxOf0ZuXY+wg
+# Checksum: VVcscBDATJHeZUjX7Rf0FA
 # Updated: 29 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1661,6 +1661,7 @@ http://anonymouse.org/ad
 /app/bbccom/
 /ArtiMediaTargetAds.swf
 /as_u/ads/
+/AS3AdPlayer.
 /aseadnshow.js
 /assets/ad/
 /astrack.
