--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: VVcscBDATJHeZUjX7Rf0FA
+# Checksum: 1b6eU57PrwXg97EJmLeBtg
 # Updated: 29 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -62,6 +62,7 @@
 -banner.swf?
 -fleshlight
 -tebya-na-dosuge.com/
+-third-ad.
 .123advertising.nl/
 .160x600_
 .247realmedia.
