--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 1b6eU57PrwXg97EJmLeBtg
+# Checksum: sM4ysgKozdKdeMt2kz9UUA
 # Updated: 29 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1443,6 +1443,7 @@
 /AdHandler.
 /adhandler/
 /AdHandlers
+/adhug_jc.
 /adiframe.aspx?
 /adiframe/
 /adim.html?ad
