--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: sM4ysgKozdKdeMt2kz9UUA
-# Updated: 29 May 2010
+# Checksum: Dh9VYe1PHTa2oHUYUXHTJQ
+# Updated: 30 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1751,6 +1751,7 @@ http://anonymouse.org/ad
 /bnrsrv.ashx?
 /borax.geo-idm.fr/
 /BottomAd.
+/bottom_adv_
 /bravenet/images/
 /buttonad/
 /call/pubif/
@@ -2023,6 +2024,7 @@ http://anonymouse.org/ad
 /mcad.php?
 /media/ads/
 /MetaAdServer/
+/middle_adv_
 /miva_ads
 /mnads1.php?
 /mod_ad/
@@ -2267,6 +2269,7 @@ http://anonymouse.org/ad
 /top_ad.
 /top_ad/
 /top_ad_
+/top_adv_
 /TopAd.aspx
 /topad.htm
 /topads.aspx?
