--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Dh9VYe1PHTa2oHUYUXHTJQ
+# Checksum: eb3QcBnEcigCLzG7cddsXQ
 # Updated: 30 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -734,6 +734,7 @@
 .livejasmin.tv/banners/
 .liveleak.com/page_parts/
 .livewords.search.
+.liverail.com/?metric
 .loveadverts.com/
 .ltassrv.com
 .lushcrush.
