--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: eb3QcBnEcigCLzG7cddsXQ
+# Checksum: 3TWA6bPh8QO2O2OeHqsFhg
 # Updated: 30 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1460,6 +1460,7 @@
 /adlink.gif
 /adloader.
 /adlog.php?
+/adotube_adapter.
 /adman/www/
 /admanagement/
 /adManagementAdv
@@ -1881,6 +1882,7 @@ http://anonymouse.org/ad
 /getSponsLinks
 /getsponslinks
 /getVdopiaAds.
+/gafv_adapter.
 /gfx/ads/
 /GgAdsense.
 /global_images/sponsors/
