--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -535,6 +535,7 @@
 .surveywriter.
 .swelen.com
 .taboolasyndication.com/log/
+.taboolasyndication.com/pixel.gif
 .tacoda.net/
 .tailsweep.com/
 .tapefailure.
