--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 3TWA6bPh8QO2O2OeHqsFhg
+# Checksum: Wfbmn+azzNpUCn3M9d6xzA
 # Updated: 30 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -360,6 +360,7 @@
 .casalemedia.
 .cashlayer.
 .cashthat.
+.cashworld.biz/
 .cb.cl/NewCBCL/Banner.
 .cb.cl/NewCBCL/images/cb_
 .cc-dt.com/link/tplimage?
