--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -461,6 +461,7 @@
 .rbcdn.com/
 .realtracker.
 .reddit.com/pixel/
+.reddit.com/comscore-iframe/
 .referrers.net/
 .reinvigorate.
 .rel.msn.com/default.aspx?
