--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -439,6 +439,7 @@
 .predictivedna.com/
 .pricegrabber.com/analytics.php/
 .pro-market.net/
+.proext.com/?
 .profilesnitch.com/tracker
 .providesupport.com/cmd/verio?
 .proximic.com/
