--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Wfbmn+azzNpUCn3M9d6xzA
-# Updated: 30 May 2010
+# Checksum: bVhTUey7A+NQKbaJT3q9JQ
+# Updated: 31 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1641,6 +1641,7 @@
 /aff-exchange/
 /aff.html
 /AFF/Banners/
+/affbanners/
 /affiliate/rotat
 /affiliate_banners/
 /affiliates/ban
