--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: bVhTUey7A+NQKbaJT3q9JQ
-# Updated: 31 May 2010
+# Checksum: Gleejr3aBlwQNgQjb8K2Zw
+# Updated: 1 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2426,6 +2426,7 @@ http://anonymouse.org/ad
 728x90.swf
 728x90.swf?
 750x80.swf
+750x90.gif
 790x250.gif
 800x120.gif
 972_70.gif
