--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Gleejr3aBlwQNgQjb8K2Zw
+# Checksum: syGuN6e+pbwGvMprzeJDHw
 # Updated: 1 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2587,6 +2587,7 @@ _480_80_
 _480x60.
 _486x60_
 _487x457_
+_490-90_
 _500x440.
 _501x60.
 _507x45.
