--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -426,6 +426,7 @@
 .pardot.com/analytics?
 .performgroup.com/
 .perlentaucher.de/cgi-bin/blanky?
+.petri.co.il/akit/?
 .phonalytics.com/
 .php?refcode=
 .picapp.com/empty.gif?
