--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: syGuN6e+pbwGvMprzeJDHw
+# Checksum: X4UCQJZAN4eMEH6XIZC6Qw
 # Updated: 1 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -807,6 +807,8 @@
 .mydirtyhobby.com/
 .mykocam.com/js/feeds.js
 .mypicturetown.com/P2PwebCmd
+.nangaspace.com/fbad.gif
+.nangaspace.com/images/cc_ad.jpg
 .n9nedegrees.
 .nabbr.com/
 .nasads.com/
