--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -617,7 +617,7 @@
 .vizu.com/
 .voicefive.com/
 .vtracker.
-.waudit.cz/hnew.php?
+.waudit.cz/
 .web-stat.com/
 .web-visor.com/
 .webhits.de/
@@ -1355,7 +1355,6 @@ getclicky.com/
 getfound.com/
 goldstats.
 GoogleAnalytics.swf?gid=
-grapher.compete.com/
 hit-counter
 hitcount.de/
 hitcounter
