--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: X4UCQJZAN4eMEH6XIZC6Qw
+# Checksum: QTpcfIRbiLMlrtATWGRyxg
 # Updated: 1 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3201,6 +3201,7 @@ http://porn-site-builder.com/
 http://post.rmbn.ru/
 http://profile.bharatmatrimony.com/
 http://promo.cams.
+http://promo.bauermedia.co.uk/
 http://promo.pegcweb.com/
 http://promo.twistyscash.
 http://promo.ulust.com/
