--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: QTpcfIRbiLMlrtATWGRyxg
+# Checksum: fI7pTZNTtgUMfZ0XFTGaqg
 # Updated: 1 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -498,6 +498,7 @@
 .ecom.js
 .ecommerce-journal.com/specdata.php?
 .edge.ru4.
+.ehow.com/images/brands/
 .eliado.com/banner/
 .elwatan.com/IMG/swf/
 .elyrics.net/inc/ads/
