--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: fI7pTZNTtgUMfZ0XFTGaqg
-# Updated: 1 Jun 2010
+# Checksum: odRC/k1i8CAjge9pIERn1Q
+# Updated: 2 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -57,6 +57,7 @@
 -ad3.jpg
 -ad_injector/
 -adsonar.
+-ad-util-
 -affiliates/img_
 -banner-ad
 -banner.swf?
