--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: odRC/k1i8CAjge9pIERn1Q
+# Checksum: OjByVsEyY7kW0VgDCfgsaA
 # Updated: 2 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1268,6 +1268,7 @@
 /468x80g
 /470x030
 /475x150-
+/480x030_
 /496_98_
 /600_90_
 /600x90.
