--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: OjByVsEyY7kW0VgDCfgsaA
+# Checksum: TZw/SoUofYpyjNWphxDs1A
 # Updated: 2 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1604,6 +1604,7 @@
 /AdsSrv.html?adpos=
 /AdsTemplate/
 /adstop.
+/adstorage.
 /adSwap.js
 /adsWrapper.js
 /adsx/www/
