--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: TZw/SoUofYpyjNWphxDs1A
+# Checksum: 0EVkk+zRy74I7LHlJfWIjg
 # Updated: 2 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1296,7 +1296,7 @@
 /728x90c
 /728x90n
 /750-100
-/760x120_
+/760x120
 /760x90_
 /768x90.
 /80x468_
