--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 0EVkk+zRy74I7LHlJfWIjg
+# Checksum: kSxY/gdZI6FXAWjld2NcwA
 # Updated: 2 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3268,6 +3268,7 @@ http://static.stileproject.com/l/
 http://static.thebigchair.com.au
 http://static.wildcammy.com/
 http://static.zangocash.
+http://static.jpost.com/images/
 http://stats-analytics.info/
 http://stats.buzzparadise.
 http://stocker.bonnint.
