--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: qgHSkB4TyNdjEdUz+cr3jA
+# Checksum: km1B4zo8DioKdphtBbb8ZQ
 # Updated: 2 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -977,6 +977,7 @@
 .sexplaycam.com/geobanners/
 .sexplaycam.com/geoprofiles/
 .sextronix.com/ban
+.sexyshare.net//banners/
 .sexyads
 .share-server.com/
 .shareasale.com/image/
@@ -2903,6 +2904,7 @@ http://ads.tweetmeme.com/
 http://ads.undertone.com/
 http://ads.w3hoster.de/
 http://ads.xhamster.com/
+http://ads.glamourbabe.info/
 http://ads.yimg.
 http://ads.yimg.com/
 http://ads05.
