--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: km1B4zo8DioKdphtBbb8ZQ
+# Checksum: xgDPdlps+nvkJQf1jH9/3g
 # Updated: 2 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1108,6 +1108,7 @@
 .urlcash.net/img/
 .usemax.de/
 .usercash.com/banners/
+.usenetpassport.com/
 .utarget.co.uk/
 .validclick.
 .valuead.
