--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: xgDPdlps+nvkJQf1jH9/3g
+# Checksum: vY6P5/5L5fSkvU+2DO8CfA
 # Updated: 2 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -733,6 +733,7 @@
 .linkstorm.net/
 .linksynergy.com/fs/banners/
 .linkz.net/
+.liutilities.com/partners/affiliate/
 .liveandchat.tv/bana-/
 .livejasmin.tv/banners/
 .liveleak.com/page_parts/
