--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: vY6P5/5L5fSkvU+2DO8CfA
+# Checksum: nhfjxPAGQSW3N72zH83aEg
 # Updated: 2 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -499,6 +499,7 @@
 .ecom.js
 .ecommerce-journal.com/specdata.php?
 .edge.ru4.
+.egghelp.org/images/misc/
 .ehow.com/images/brands/
 .eliado.com/banner/
 .elwatan.com/IMG/swf/
