--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: nhfjxPAGQSW3N72zH83aEg
+# Checksum: x1fSAhAolfm+Bm9vx+Qtqg
 # Updated: 2 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -593,7 +593,6 @@
 .gonamic.de/
 .goodadvert.ru/
 .google.com/uds/?file=ads
-.googleadservices.com/
 .googlesyndication.com/apps/domainpark/
 .gopjn.com/b/
 .gowilkes.com/cj/
@@ -3187,6 +3186,7 @@ http://pagead2.
 http://pan.dogster.com/
 http://partners.heart2heartnetwork.
 http://partners.vcommission.com/
+http://partner.googleadservices.com/
 http://partners.xhamster.
 http://payperpost.
 http://payplay.fm/javascripts/masterCS.js?
