--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: x1fSAhAolfm+Bm9vx+Qtqg
+# Checksum: J3zVPi5TBd5P2KH0y566cg
 # Updated: 2 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1136,6 +1136,7 @@
 .webmasterplan.
 .wegcash.com/click/
 .wendise.com/tools/thumbs
+.weselectmodels.com/ZillionaireDate_Banner/
 .weselltraffic.
 .wgreatdream.com/
 .wibiya.com/toolbarLoader.php?
