--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Q0b5a3HiMsSqlORhq/O1DQ
+# Checksum: wn/hMSLfb+hK7YDYyVdcNA
 # Updated: 2 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1863,7 +1863,6 @@ http://anonymouse.org/ad
 /frame_ads_
 /friendfinder_
 /galleries/banners/
-/gam.html?
 /gam_ad_
 /gca_iframe.html?
 /geo-ads_
@@ -2080,6 +2079,7 @@ http://anonymouse.org/ad
 /ovt_show.asp?
 /ovt_show.asp?
 /ox/www/
+/p2/ads/
 /page-ads.js?
 /page-peel
 /pagead/ads?client
