--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: wn/hMSLfb+hK7YDYyVdcNA
-# Updated: 2 Jun 2010
+# Checksum: o1lhrGXf8FzURvge01kDPg
+# Updated: 3 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -123,6 +123,7 @@
 .adfrontiers.com/
 .adfusion.
 .adgardener.
+.adgear.com/
 .adgent007.com/
 .adgitize.com/
 .adgoto.com/
