--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: o1lhrGXf8FzURvge01kDPg
+# Checksum: 2bxI9NRhDeE7jck3jkIFNw
 # Updated: 3 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1620,6 +1620,7 @@
 /adtag.gif
 /adtag.htm?
 /adtago.
+/adtagtc.
 /AdTech.
 /ADTECH;
 /adtext4
@@ -1664,6 +1665,7 @@
 /ajs.php?
 /ak/ads/
 /altClickToSearch.js
+/am/ads.
 /amaffiliate/private/resources/banners/
 /amazon/iframeproxy-
 /amazon/widget/
