--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 2bxI9NRhDeE7jck3jkIFNw
-# Updated: 3 Jun 2010
+# Checksum: K1ohUJejAwCEC20rQFVRcw
+# Updated: 4 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2060,6 +2060,7 @@ http://anonymouse.org/ad
 /ngbn.net/
 /nsfw/sponsors/
 /oas/ad/
+/OAS/banners/
 /OAS_Handler.
 /oas_home_
 /OASAdConnector
