--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: K1ohUJejAwCEC20rQFVRcw
+# Checksum: Z3ymxP56e9kXZ0NJQxRjVQ
 # Updated: 4 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1527,8 +1527,8 @@
 /ads/adstream_
 /ads/adx.
 /ads/Banner
-/ads/Banner
 /ads/banner
+/ads/adbot
 /ads/click_
 /ads/freewheel/
 /ads/html/
