--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Z3ymxP56e9kXZ0NJQxRjVQ
+# Checksum: 3+BmFGSlzPV8l+4/E3BPDQ
 # Updated: 4 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1644,6 +1644,7 @@
 /adview.
 /advision
 /advmaker.ru/
+/AdvertisingModule.
 /AdvScript.
 /advscripts/
 /AdWorks/
