--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -862,6 +862,7 @@
 /geoip.html
 /geoipAPI.js?
 /get_browser_info.
+/GetDynamicStats
 /getsatisfaction.com/feedback/transparent.gif
 /gifbanner?
 /gifstats.
