--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 3+BmFGSlzPV8l+4/E3BPDQ
+# Checksum: pGA5wT/I2SqbGrWJx95MRA
 # Updated: 4 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3316,6 +3316,7 @@ http://vadpay.com/images/
 http://vas.ppro.de/
 http://video-people.com/img/
 http://video.unrulymedia.com/iframe_
+http://videos.theonion.com/ads/
 http://view.atdmt.
 http://void.flirt4e.com/
 http://vst.vstseed.com/
