site: http://go.bigpond.com/home/index.jsp?ref=Net-Head-BPlogo

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: pGA5wT/I2SqbGrWJx95MRA
+# Checksum: khvLZmVQs+t6SR6rdz3F8g
 # Updated: 4 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -307,6 +307,7 @@
 .bidsystem.com/
 .bidvertiser.
 .biemedia.
+.bigpond.com/home/skin_
 .bigpond.com/specials/widgets/specials/
 .bigtube.com/iframes/
 .binlayer.de/
