--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: khvLZmVQs+t6SR6rdz3F8g
+# Checksum: rv1FWaEpQIQSxGAV5zt2fw
 # Updated: 4 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1951,6 +1951,7 @@ http://anonymouse.org/ad
 /image_ad
 /imageads/
 /images.ads.
+/images/ad125
 /images/336x280
 /images/ad/
 /images/ad_
