--- a/easylistfanboy/iron/adblock-jpn.ini
+++ b/easylistfanboy/iron/adblock-jpn.ini
@@ -84,6 +84,7 @@
 .weblio.jp/
 .xrea.com/banner
 .y-bbs.net/k/
+.yomiuri.co.jp/ad/
 .yimg.jp/bdv/
 .yimg.jp/images/news/newsSearch/img/banner
 /ad_bomb/
