--- a/easylistfanboy/iron/adblock-jpn.ini
+++ b/easylistfanboy/iron/adblock-jpn.ini
@@ -55,6 +55,7 @@
 .jp/urchin.js
 .jp/Zen?
 .kau.li/ad.js
+.kazenoashiato.jp/file/index/FILECD/
 .logoole.yahoo.co.jp/
 .magma-analytics.
 .meiwasuisan.com/images/numbers
