--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: rv1FWaEpQIQSxGAV5zt2fw
+# Checksum: DFt+WDM4q2hKtrRZk2aiug
 # Updated: 4 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -54,10 +54,10 @@
 -728x90_
 -980x60-
 -988x60.
+-ad-util-
 -ad3.jpg
 -ad_injector/
 -adsonar.
--ad-util-
 -affiliates/img_
 -banner-ad
 -banner.swf?
@@ -310,8 +310,8 @@
 .bigpond.com/home/skin_
 .bigpond.com/specials/widgets/specials/
 .bigtube.com/iframes/
-.binlayer.de/
 .binlayer.com/
+.binlayer.de/
 .bittads.com/
 .bizographics.
 .bkrtx.com/
@@ -739,8 +739,8 @@
 .liveandchat.tv/bana-/
 .livejasmin.tv/banners/
 .liveleak.com/page_parts/
-.livewords.search.
 .liverail.com/?metric
+.livewords.search.
 .loveadverts.com/
 .ltassrv.com
 .lushcrush.
@@ -812,10 +812,10 @@
 .mydirtyhobby.com/
 .mykocam.com/js/feeds.js
 .mypicturetown.com/P2PwebCmd
-.nangaspace.com/fbad.gif
-.nangaspace.com/images/cc_ad.jpg
 .n9nedegrees.
 .nabbr.com/
+.nangaspace.com/fbad.gif
+.nangaspace.com/images/cc_ad.jpg
 .nasads.com/
 .nastydollars.com/hosted/geo/
 .nastydollars.com/sts/banners/
@@ -980,8 +980,8 @@
 .sexplaycam.com/geobanners/
 .sexplaycam.com/geoprofiles/
 .sextronix.com/ban
-.sexyshare.net//banners/
 .sexyads
+.sexyshare.net//banners/
 .share-server.com/
 .shareasale.com/image/
 .shareresults.
@@ -1110,8 +1110,8 @@
 .unicast.com/
 .urlcash.net/img/
 .usemax.de/
-.usercash.com/banners/
 .usenetpassport.com/
+.usercash.com/banners/
 .utarget.co.uk/
 .validclick.
 .valuead.
@@ -1472,7 +1472,6 @@
 /adlink.gif
 /adloader.
 /adlog.php?
-/adotube_adapter.
 /adman/www/
 /admanagement/
 /adManagementAdv
@@ -1485,6 +1484,7 @@
 /admin/ad_
 /adnetmedia.
 /adng.html?
+/adotube_adapter.
 /adpage.htm
 /adpeeps
 /ADPictures/
@@ -1523,13 +1523,13 @@
 /ads/a.aspx?
 /ads/ad.
 /ads/ad_
+/ads/adbot
 /ads/adg.js
 /ads/adnet
 /ads/adstream_
 /ads/adx.
 /ads/Banner
 /ads/banner
-/ads/adbot
 /ads/click_
 /ads/freewheel/
 /ads/html/
@@ -1640,12 +1640,12 @@
 /advert.php?
 /advert_iframe
 /advertise
+/AdvertisingModule.
 /advertpro/
 /advfiles/
 /adview.
 /advision
 /advmaker.ru/
-/AdvertisingModule.
 /AdvScript.
 /advscripts/
 /AdWorks/
@@ -1673,7 +1673,6 @@
 /amazon/widget/
 /annonse/
 /annonser/
-http://anonymouse.org/ad
 /anti-adblock/
 /api.tattermedia.com/
 /api/ads/
@@ -1681,8 +1680,8 @@ http://anonymouse.org/ad
 /app/bbccom/
 /app/bbccom/
 /ArtiMediaTargetAds.swf
-/as_u/ads/
 /AS3AdPlayer.
+/as_u/ads/
 /aseadnshow.js
 /assets/ad/
 /astrack.
@@ -1769,8 +1768,8 @@ http://anonymouse.org/ad
 /bnrimg.php
 /bnrsrv.ashx?
 /borax.geo-idm.fr/
-/BottomAd.
 /bottom_adv_
+/BottomAd.
 /bravenet/images/
 /buttonad/
 /call/pubif/
@@ -1867,6 +1866,7 @@ http://anonymouse.org/ad
 /forums/ad/
 /frame_ads_
 /friendfinder_
+/gafv_adapter.
 /galleries/banners/
 /gam_ad_
 /gca_iframe.html?
@@ -1898,7 +1898,6 @@ http://anonymouse.org/ad
 /getSponsLinks
 /getsponslinks
 /getVdopiaAds.
-/gafv_adapter.
 /gfx/ads/
 /GgAdsense.
 /global_images/sponsors/
@@ -1951,9 +1950,13 @@ http://anonymouse.org/ad
 /image_ad
 /imageads/
 /images.ads.
-/images/ad125
 /images/336x280
 /images/ad/
+/images/ad1.
+/images/ad125
+/images/ad2.
+/images/ad4.
+/images/ad5.
 /images/ad_
 /images/adbar.gif
 /images/ADS
@@ -1966,10 +1969,6 @@ http://anonymouse.org/ad
 /images/gads_
 /images/LD-ads.gif
 /IMAGES/livejasmin/
-/images/ad1.
-/images/ad2.
-/images/ad4.
-/images/ad5.
 /images/newad.
 /images/sponsors/
 /images/totem
@@ -2239,6 +2238,7 @@ http://anonymouse.org/ad
 /spcjs.php?
 /spo_show.asp?
 /sponLink.htm?
+/sponser.js
 /sponsor-ad
 /sponsoradds/
 /sponsorads
@@ -2865,6 +2865,7 @@ http://ads.drugs.com/
 http://ads.e-go.gr/
 http://ads.focus-news.net/
 http://ads.gather.com/
+http://ads.glamourbabe.info/
 http://ads.gravytrainproductions.
 http://ads.greenerworldmedia.com/
 http://ads.hearstmags.com/
@@ -2914,7 +2915,6 @@ http://ads.tweetmeme.com/
 http://ads.undertone.com/
 http://ads.w3hoster.de/
 http://ads.xhamster.com/
-http://ads.glamourbabe.info/
 http://ads.yimg.
 http://ads.yimg.com/
 http://ads05.
@@ -2967,6 +2967,7 @@ http://ajax.1tizer.com/
 http://alternads.info/
 http://annonse.
 http://annonser.
+http://anonymouse.org/ad
 http://anzeigen
 http://appbodega.com/Promos/
 http://armorgames.com/misc/banners/
@@ -2991,10 +2992,10 @@ http://banners.cfspm.com.au/*
 http://banners.itweb.co.za/
 http://banners.ixitools.
 http://banners.moreniche.com/show.
+http://banners.partypartners.com/
 http://banners.rushcommerce.com/
 http://banners.videosz.com/
 http://banners.webcams.com/
-http://banners.partypartners.com/
 http://banners.webmasterplan.
 http://banners3.
 http://bans.bride.
@@ -3192,9 +3193,9 @@ http://outils.f5biz.
 http://overlay.ringtonematcher.com/overlay/
 http://pagead2.
 http://pan.dogster.com/
+http://partner.googleadservices.com/
 http://partners.heart2heartnetwork.
 http://partners.vcommission.com/
-http://partner.googleadservices.com/
 http://partners.xhamster.
 http://payperpost.
 http://payplay.fm/javascripts/masterCS.js?
@@ -3217,8 +3218,8 @@ http://popurls.com/ad/
 http://porn-site-builder.com/
 http://post.rmbn.ru/
 http://profile.bharatmatrimony.com/
-http://promo.cams.
 http://promo.bauermedia.co.uk/
+http://promo.cams.
 http://promo.pegcweb.com/
 http://promo.twistyscash.
 http://promo.ulust.com/
@@ -3277,11 +3278,11 @@ http://squeeder.com/
 http://stat-data.
 http://static.4chan.org/support/
 http://static.apture.com/media/
+http://static.jpost.com/images/2009/NewSite/
 http://static.stileproject.com/l/
 http://static.thebigchair.com.au
 http://static.wildcammy.com/
 http://static.zangocash.
-http://static.jpost.com/images/2009/NewSite/
 http://stats-analytics.info/
 http://stats.buzzparadise.
 http://stocker.bonnint.
