--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: DFt+WDM4q2hKtrRZk2aiug
-# Updated: 4 Jun 2010
+# Checksum: iD7WRk4NckIgP5Co4w+jtg
+# Updated: 5 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -312,6 +312,7 @@
 .bigtube.com/iframes/
 .binlayer.com/
 .binlayer.de/
+.bin-layer.de/
 .bittads.com/
 .bizographics.
 .bkrtx.com/
@@ -1285,6 +1286,7 @@
 /700x120.
 /700x250.
 /72890-0
+/728_90_
 /728_200.
 /728_200_
 /728_90.
