--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -539,6 +539,7 @@
 .superstats.
 .surveywriter.
 .swelen.com
+.swfstats.com/
 .taboolasyndication.com/log/
 .taboolasyndication.com/pixel.gif
 .tacoda.net/
