--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: iD7WRk4NckIgP5Co4w+jtg
+# Checksum: 9s6KPybnlcYM+ii/jdgZvQ
 # Updated: 5 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -558,6 +558,7 @@
 .fr/RealMedia/
 .freaksofcock.com/track/
 .freeones.com/assets/ads/
+.free-times.com/Image/Pool/
 .freeones.com/banners/
 .freepaidsurveyz.
 .friendlyduck.
