--- a/easylistfanboy/iron/adblock-trk.ini
+++ b/easylistfanboy/iron/adblock-trk.ini
@@ -44,6 +44,7 @@
 .reklamport.com/
 .reklamstore.com/
 .sabah.com.tr/geo
+.sabah.com.tr/banner/
 .softreklam.com/
 .sporx.com/i/sx_
 .superpoligon.com/tracker
