--- a/easylistfanboy/iron/adblock-trk.ini
+++ b/easylistfanboy/iron/adblock-trk.ini
@@ -70,6 +70,7 @@
 .web.tr/v2/banner/
 .yenicaggazetesi.com.tr/banner/
 .yenimedya.com.tr/
+/adnet_async.
 /banner/reklam-
 /Banners/Sponsored
 /ebulten/ebulten_
