--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: cbTUcfUI7BlRmJSuoqK5yQ
+# Checksum: jnYtGbI7b36LY/d4VHydQw
 # Updated: 5 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1714,7 +1714,6 @@
 /banner/RTads/
 /banner160x
 /banner468
-/banner?size=
 /banner_.cfm?
 /banner_125x
 /banner_468x
