--- a/easylistfanboy/iron/adblock-trk.ini
+++ b/easylistfanboy/iron/adblock-trk.ini
@@ -30,6 +30,7 @@
 .kobi-efor.com.tr/banner/
 .maraton.com.tr/banner
 .maraton.com.tr/img/iddaabanner
+.medya73.com/images/banner/
 .memlekethaber.com/banner/
 .milliyet.com.tr/d/f/1/
 .ntvmsnbc.com/adv/
@@ -68,6 +69,7 @@
 .wardom.org/msnpopw.js
 .web.tr/banner/
 .web.tr/v2/banner/
+.webhaber.com/advers/
 .yenicaggazetesi.com.tr/banner/
 .yenimedya.com.tr/
 /adnet_async.
