--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: jnYtGbI7b36LY/d4VHydQw
-# Updated: 5 Jun 2010
+# Checksum: gUGa6gvS07CSl9ydprSGHg
+# Updated: 6 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1872,6 +1872,7 @@
 /gafv_adapter.
 /galleries/banners/
 /gam_ad_
+/gameadsync.
 /gca_iframe.html?
 /geo-ads_
 /geobox.html
