--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: gUGa6gvS07CSl9ydprSGHg
+# Checksum: 0Y0goJDEIIUoSk3C30m0xw
 # Updated: 6 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -826,6 +826,7 @@
 .nearlygood.com/inc/_aff.php?
 .neodatagroup.com/
 .neowin.net/images/adbot_promos/
+.neowin.net/images/atlas/aww3.
 .net/_ads/
 .net/ad-
 .net/adi/
