--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -227,6 +227,7 @@
 .ewebcounter.com/
 .exelator.
 .extreme-dm.
+.experts-exchange.com/pageLoaded.jsp?
 .facebook.com/ap.php?i=
 .facebook.com/impression.php?
 .fc2.com/analyze.js
