--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -618,6 +618,7 @@
 .visitdetails.com/
 .visitor-track.com/
 .visualdna-stats.
+.vitalmedianet.com/
 .vizu.com/
 .voicefive.com/
 .vtracker.
@@ -702,6 +703,7 @@
 /analyticReporting
 /analytics.js
 /analytics.php?
+/analytics.swf?
 /analytics/js/
 /analytics/track
 /analytics:jquery
