--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -115,6 +115,7 @@
 .youdaylove.cn/
 .zgjrw.com/Expand/Advertisement/
 .zoosnet.
+/ad.swf
 /acs86.com/
 /ad/600-
 /ad_show?id
@@ -139,6 +140,7 @@
 /js/ivy.js
 /js/picad.js
 /js/rollflash.js
+/logcount.php?
 /l.yimg.com/mq/i/home/promo/
 /neiyead.js
 /pvcounter/
@@ -218,6 +220,7 @@ http://ndx.netdrive.tv/
 http://pbcdn.com/gg/
 http://pbcdn.com/mac/
 http://pfp.sina.com.cn/iframe/
+http://phpstat.
 http://pic.zol.com.cn/200
 http://pingfore.qq.com/
 http://pingjs.qq.com/
