--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -108,6 +108,7 @@
 .xizi.com/count/
 .xizi.com/include/rotator.js
 .xuanyx.com/
+.xinhuanet.com/edu/10flash2.
 .yahoo.com.tw/res/ads/
 .yigao.com/servlet/
 .yodao.com/imp/
@@ -155,6 +156,7 @@
 /usertrack.js?
 /VisitLog/
 /visitorInfo.js?
+/xilan_banner_
 _right_ads_
 _sidebar_ad.
 _souvv_ads.js
