--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -77,6 +77,8 @@
 .net/topad
 .newhua.com/askgg/
 .nextmedia.com/DFA/Init.js
+.nfdaily.cn//banner/
+.nfdaily.cn/banner/
 .pagechoice.net/adagent/
 .pcpop.com/uploadfiles/2009
 .qnr.cn/qnrcnts/UploadADPic/
