site: http://sichuan.scol.com.cn/dwzw/content/2010-06/06/content_845820.htm?node=968

--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -88,6 +88,7 @@
 .skycn.com/tuijianimg/
 .sohu.com/blogcount?
 .sohu.com/click2/
+.scol.com.cn/linkpic/
 .stat.ku6.com/dostatv.do?
 .szbooks.com/hope/baner
 .tianjimedia.
