--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -158,6 +158,7 @@
 /union/ad_
 /unionGetAd.php?
 /usertrack.js?
+/viewlist/service.jsp?
 /VisitLog/
 /visitorInfo.js?
 /xilan_banner_
@@ -165,6 +166,7 @@ _right_ads_
 _sidebar_ad.
 _souvv_ads.js
 http:///img.cnbeta.com/59
+http://58.68.146.4
 http://203.80.0.202/
 http://203.80.0.226/
 http://211.147.20.14/
