--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -17,6 +17,7 @@
 .alixixi.com/adsview/
 .asoft.cn/
 .atm.youku.com/
+.bayuq.com/frm_adv.aspx?gid=10
 .blogad.com.tw/
 .brand.sogou.com/
 .btnibbler.com/
@@ -226,6 +227,7 @@ http://ktzhk.com/
 http://m.openv.tv/m/
 http://mat1.gtimg.com/ent/
 http://ndx.netdrive.tv/
+http://p.cpm9v.cn/
 http://pbcdn.com/gg/
 http://pbcdn.com/mac/
 http://pfp.sina.com.cn/iframe/
