--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 0Y0goJDEIIUoSk3C30m0xw
+# Checksum: mgbGafGYrHCYYOiXoaUrXw
 # Updated: 6 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1881,6 +1881,7 @@
 /get-ad.php?
 /get_ads.js?
 /get_banner.asp?
+/getad.ashx?
 /getad.aspx?
 /getad.js
 /getad.php
