--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -95,6 +95,7 @@
 .szbooks.com/hope/baner
 .tianjimedia.
 .tianya.cn/images/bktxguang
+.titan24.com/gg/
 .tp2.yahoo.com/b?s
 .tudou.com/adcontrol/
 .tudou.com/cptadvcontrol/
