--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -121,6 +121,7 @@
 .youdao.com/imp/
 .youdaylove.cn/
 .zgjrw.com/Expand/Advertisement/
+.zaobao.com.sg/ssi/bizp/
 .zoosnet.
 /ad.swf
 /acs86.com/
@@ -134,6 +135,7 @@
 /cmnen_counter.js
 /contads.gif
 /data/ad/
+/DisplayAd?
 /get_mood_count.
 /GetAdContent.aspx?
 /GetAdList
