--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -39,6 +39,7 @@
 .cn/logging_
 .cn/showcount?
 .cn/urchin.js
+.cnhubei.com/jszzzx/
 .cnbeta.com/hp_
 .cnbeta.com/images/qy/
 .cnbeta.com/images/tw125
