--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: mgbGafGYrHCYYOiXoaUrXw
+# Checksum: pXknDjzuOBWeOtIge3bCqQ
 # Updated: 6 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -171,6 +171,7 @@
 .adru.net/
 .ads.darla.
 .ads.netlog.com/
+.ads.pof.com/
 .ads4webbis.de/
 .adscale.de/
 .adsdk.com/
