--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -202,8 +202,8 @@
 .do_tracking
 .doubleclick.net/dot.gif?
 .dti-ranker.com/
-.dwin2.com/
 .dw-world.de/run.js
+.dwin2.com/
 .e-pagerank.
 .e-referrer.com/
 .easyranking.de/
@@ -226,8 +226,8 @@
 .evri.com/analytics/
 .ewebcounter.com/
 .exelator.
-.extreme-dm.
 .experts-exchange.com/pageLoaded.jsp?
+.extreme-dm.
 .facebook.com/ap.php?i=
 .facebook.com/impression.php?
 .fc2.com/analyze.js
@@ -373,9 +373,9 @@
 .mlstat.com/
 .mm7.net/
 .mmismm.
-.mpora.com/tv/player/stats/
 .monetate.net/
 .monitus.net/
+.mpora.com/tv/player/stats/
 .mpwe.net/
 .msn.com/ro.aspx?
 .mtv.com/sitewide/droplets/
@@ -433,6 +433,7 @@
 .php?refcode=
 .picapp.com/empty.gif?
 .pl/stats.js
+.plentyoffish.com/tracking.
 .pointomatic.
 .popsample.
 .postrelease.com/
@@ -1484,8 +1485,8 @@ http://link.ixs1.net/s/
 http://linotraffic.com/
 http://livestat.
 http://lloogg.com/
-http://logdy.com/
 http://log2.vitalmedianet.com/
+http://logdy.com/
 http://logger.
 http://logging.
 http://logping.
@@ -1541,10 +1542,10 @@ http://stats.behance.net/
 http://stats.big-boards.
 http://stats.blogoscoop.net/
 http://stats.break.com/
-http://stats.lightningcast.net/
 http://stats.e-go.gr/
 http://stats.greenoptions.com/
 http://stats.justin.tv/
+http://stats.lightningcast.net/
 http://stats.topofblogs.com/
 http://stats.video.
 http://stats2.
