--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -103,6 +103,7 @@
 .tp2.yahoo.com/b?s
 .tudou.com/adcontrol/
 .tudou.com/cptadvcontrol/
+.tw/tserver/
 .unionsky.cn/
 .wauee.com/kaokaoni/
 .wdjl.net/ad
